--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<div id="verification_heading">OTP Verification</div>
+	<div id="verification_heading">Verify Your Account</div>
         <div id="verification_subtext">Enter the 6-digit OTP sent to your mobile number</div>
         <div class="code-container">
             <input type="text" class="code" maxlength="1" oninput="focusNext(this)" onkeydown="focusPrev(this, event)">
