--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 	<div id="verification_heading">Verify Your Account</div>
         <div id="verification_subtext">Enter the 6-digit OTP sent to your mobile number</div>
         <div class="code-container">
-            <input type="text" class="code" maxlength="1" oninput="focusNext(this)" onkeydown="focusPrev(this, event)">
-            <input type="text" class="code" maxlength="1" oninput="focusNext(this)" onkeydown="focusPrev(this, event)">
-            <input type="text" class="code" maxlength="1" oninput="focusNext(this)" onkeydown="focusPrev(this, event)">
-            <input type="text" class="code" maxlength="1" oninput="focusNext(this)" onkeydown="focusPrev(this, event)">
-            <input type="text" class="code" maxlength="1" oninput="focusNext(this)" onkeydown="focusPrev(this, event)">
-            <input type="text" class="code" maxlength="1" oninput="focusNext(this)" onkeydown="focusPrev(this, event)">
+            <input type="text" id='code-1' class="code" maxlength="1" oninput="focusNext(this)" onkeydown="focusPrev(this, event)">
+            <input type="text" id='code-2'  class="code" maxlength="1" oninput="focusNext(this)" onkeydown="focusPrev(this, event)">
+            <input type="text" id='code-3'  class="code" maxlength="1" oninput="focusNext(this)" onkeydown="focusPrev(this, event)">
+            <input type="text" id='code-4'  class="code" maxlength="1" oninput="focusNext(this)" onkeydown="focusPrev(this, event)">
+            <input type="text" id='code-5'  class="code" maxlength="1" oninput="focusNext(this)" onkeydown="focusPrev(this, event)">
+            <input type="text" id='code-6'  class="code" maxlength="1" oninput="focusNext(this)" onkeydown="focusPrev(this, event)">
         </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
